Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ variables:
   - name: backendAzureRmResourceGroupName
     value: 'firewallusage'
   - name: backendAzureRmStorageAccountName
-    value: 'cs210032002e325ec0b'
+    value: 'yashistg'
   - name: backendAzureRmContainerName
     value: 'firewall'
   - name: backendAzureRmKey
