--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,13 @@ parameters:
  
 variables:
   - name: backendServiceArm
-    value: 'Pay-As-You-Go (5beddca6-6c7a-426d-a704-8305f3fb07ab)'
+    value: 'Pay-As-You-Go (cbf8b966-9488-4fc7-a133-b65c3b0285a8)'
   - name: backendAzureRmResourceGroupName
-    value: 'testyashi'
+    value: 'firewallrg'
   - name: backendAzureRmStorageAccountName
-    value: 'yashistg'
+    value: 'firewallstg'
   - name: backendAzureRmContainerName
-    value: 'firewall'
+    value: 'firewallcontainer'
   - name: backendAzureRmKey
     value: 'terraform.tfstate'
   - name: terraform_version
